--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "cron": "^4.3.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
+    "https": "^1.0.0",
     "socket.io": "^4.8.1"
   }
 }
